r1.1-65
*Overhaul the internals of the CAD Assembler to not be 1.8 era garbagio. (WireSegal)
*[API] Added AssembleCADEvent. (WireSegal)
*[API] Added IShowPsiBar. (WireSegal)
*[API] Fix Kamefrede's changes referencing non-API code from the API package. (WireSegal)
r1.1-64
*Fixed Bright Psimetal Plates not being localized. (Kamefrede)
*Fixed Operator: Entity Motion returning the wrong magnitude for players. (Kamefrede)
*Fixed some blocks not having creative tabs. (Kamefrede)
*[API] Added CADTakeEvent and PostCADCraftEvent. (Kamefrede)
*[API] Changed how ISocketable accepts bullets. (Kamefrede)
r1.1-63
*Fixed spells not casting because WireSegal did a dumb. (SanAndreasP)
r1.1-62
*Fixed boot spells not working on servers. (WireSegal)
*[API] Added an event for before a spell is cast so addons can do cool things with it. (WireSegal)
r1.1-61
*Fixed a random client crash with the camera not being set properly or something like that. It's fixed. (Kamefrede)
r1.1-60
*Added further reprecautions to overflowing your psi. If you do so, you can only cast spells once you're back to full.
*Added the ability to pick which spell piece to be placed into the grid with ENTER by using TAB.
*Fixed a crash that I honestly have no idea what it was caused by but it's fixed.
*Fixed a crash when a projectile collides with invalid context. (Terrana)
*Fixed a crash when loading a void world.
*Fixed a crash when pointing Constant: Wrapper towards itself with a connector.
*Fixed a crash when using Selector: Eidos Changelog with an input value of 0.
*Fixed blocks connecting to conjured lights.
*Fixed both smelt tricks deleting items and blocks.
*Fixed conjured lights having the wrong bounding box. (juliand665)
*Fixed loopcasting having incorrect delay on the first to second cast.
*Fixed psimetal boot spells not having a proper server side component sometimes.
*Fixed psimetal tools not having proper tool clases.
*Fixed Selector: Block Presence never returning 1.